// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enabled-limit-field Renders \`enabled-limit-field\` with custom props 1`] = `
<div
  class="layout mb-3 align-center"
>
  <div
    class="flex xs5"
  >
    <c-enabled-field-stub
      hide-details="hide-details"
      value="true"
    />
  </div>
  <div
    class="flex xs7"
  >
    <c-number-field-stub
      hide-details="hide-details"
      label="Custom label"
      min="1"
      name="custom-name"
      required="required"
      value="2"
    />
  </div>
</div>
`;

exports[`enabled-limit-field Renders \`enabled-limit-field\` with default props 1`] = `
<div
  class="layout mb-3 align-center"
>
  <div
    class="flex xs5"
  >
    <c-enabled-field-stub
      hide-details="hide-details"
    />
  </div>
  <div
    class="flex xs7"
  >
    <c-number-field-stub
      disabled="true"
      hide-details="hide-details"
      min="1"
      name="enabledLimitValue"
      required="required"
      value="1"
    />
  </div>
</div>
`;
